cmake_minimum_required(VERSION 3.25)
project(C__Algorithm)

set(CMAKE_CXX_STANDARD 17)


add_executable(main main.cpp Array/alphabet.cpp Array/roomnumber.cpp)
add_executable(normal Basic/normal.cpp Basic)
add_executable(fastsum Basic/fastsum.cpp Array/array.cpp Array/array.h)
add_executable(array Array/array.cpp)
add_executable(alphabet Array/alphabet.h Array/alphabet.cpp Array/roomnumber.cpp)
add_executable(roomnumber Array/roomnumber.cpp)
add_executable(linkedlist LinkedList/linkedlist.cpp)
add_executable(editor LinkedList/editor.cpp)
add_executable(stack Stack/stack.cpp)
add_executable(Quene Queue/Queue.cpp)
add_executable(implQueue Queue/implQueue.cpp)
add_executable(Deque Deque/Deque.cpp)
add_executable(balanceworld Deque/balanceworld.cpp)
add_executable(picture Bfs/picture.cpp)
add_executable(maze Bfs/maze.cpp)
add_executable(hanoiTower Recursion/hanoiTower.cpp)
add_executable(keylogger LinkedList/keylogger.cpp)
add_executable(dyschromatopsia Bfs/dyschromatopsia.cpp)
add_executable(cat Basic/sort.cpp)
add_executable(count Array/count.cpp)
add_executable(ac Deque/ac.cpp Deque/ac.cpp swea/KillFly.cpp)
add_executable(bank atm.cpp)
add_executable(coldCabbage Bfs/coldCabbage.cpp)
add_executable(knightMove Bfs/knightMove.cpp)
add_executable(breakWall Bfs/breakWall.cpp)
add_executable(termProject Bfs/termProject.cpp)
add_executable(soomba Bfs/soomba.cpp)
add_executable(soombaThree Bfs/soombaThree.cpp)
add_executable(monkeyHopes Bfs/monkeyHopes.cpp)
add_executable(colorPaper Recursion/colorPaper.cpp)
add_executable(nandmFive BackTracking/nandm/nandmFive.cpp)
add_executable(nandmSix BackTracking/nandm/nandmSix.cpp)
add_executable(nandmEight BackTracking/nandm/nandmEight.cpp)
add_executable(nandmTwelve BackTracking/nandm/nandmTwelve.cpp)
add_executable(sevenSisters BackTracking/sevenSisters.cpp)
add_executable(forTest forTest.cpp)
add_executable(makeLine Sort/makeLine.cpp)
add_executable(NormalBackpack DP/NormalBackpack.cpp)
add_executable(BackpackTwo DP/BackpackTwo.cpp)
add_executable(TilingTwo DP/TilingTwo.cpp)
add_executable(Lcs DP/Lcs.cpp)
add_executable(coin DP/coin.cpp)
add_executable(TImeMachine Graph/Bellman-Ford/TImeMachine.cpp)
add_executable(ShortestPath Graph/Dijkstra/ShortestPath.cpp)
add_executable(Floyd Graph/Floyd-Warshall/Floyd.cpp)
add_executable(MusicProgram Graph/MusicProgram.cpp)
add_executable(ConnectNetwork Graph/Union-Find/ConnectNetwork.cpp)
add_executable(SumOfNumber Algo_Dev/SumOfNumber.cpp)
add_executable(Sparse_Table Segment_Tree/Sparse_Table.cpp)
add_executable(Marriage Graph/Marriage.cpp)
add_executable(KillFly swea/KillFly.cpp)
add_executable(TwoNumberString swea/TwoNumberString.cpp)
add_executable(escape Bfs/second/escape.cpp)
add_executable(sum_section DP/sumSection.cpp)
add_executable(sumSection DP/sumSection.cpp)
add_executable(ContinuousSum DP/ContinuousSum.cpp)
add_executable(MeetingRoom Greedy/MeetingRoom.cpp)
add_executable(ChangYong_Village for_A/ChangYong_Village.cpp)
add_executable(Special_Magnet for_A/Special_Magnet.cpp)
add_executable(Switch for_A/Switch.cpp)
add_executable(Floyd2 Graph/Floyd-Warshall/Floyd2.cpp)
add_executable(Shark_elementary for_A/Shark_elementary.cpp)
add_executable(lab for_A/lab.cpp)
add_executable(FineDust for_A/FineDust.cpp)
add_executable(DiceRoll for_A/DiceRoll.cpp)
add_executable(DragonCurve for_A/DragonCurve.cpp)
add_executable(PeopleMove for_A/PeopleMove.cpp)
add_executable(Microbe_Isolation for_A/Microbe_Isolation.cpp)
add_executable(MountainWay for_A/MountainWay.cpp)
add_executable(Processor_connect for_A/Processor_connect.cpp)
add_executable(Wireless_charge for_A/Wireless_charge.cpp)
add_executable(TreePay for_A/TreePay.cpp)
add_executable(2048 Implementation/2048.cpp)
add_executable(BuildRoad for_A/BuildRoad.cpp)
add_executable(BuildRoad2 for_A/BuildRoad2.cpp)
add_executable(GraphEat DP/GraphEat.cpp)
add_executable(11053 DP/11053.cpp)
add_executable(PasteTile DP/PasteTile.cpp)
add_executable(Pado DP/Pado.cpp)
add_executable(2225 DP/2225.cpp)
add_executable(10825 Sort/10825.cpp)
add_executable(BabyShark2 for_A/BabyShark2.cpp)
add_executable(11652 Sort/11652.cpp)
add_executable(11004 Sort/11004.cpp)
add_executable(10799 Stack/10799.cpp)
add_executable(10809 Basic/10809.cpp)
add_executable(2743 Basic/2743.cpp)
add_executable(11655 Basic/11655.cpp)
add_executable(10824 Basic/10824.cpp)
add_executable(11656 Basic/11656.cpp)
add_executable(Garymendering for_A/Garymendering.cpp)
add_executable(1158 Queue/1158.cpp)
add_executable(1934 Math/1934.cpp)
add_executable(11005 Math/11005.cpp)
add_executable(2745 Math/2745.cpp)
add_executable(1260 Bfs/1260.cpp)
add_executable(1707 Bfs/1707.cpp)
add_executable(10451 Bfs/10451.cpp)
add_executable(9466 Bfs/9466.cpp)
add_executable(2667 Bfs/2667.cpp)
add_executable(4963 Bfs/4963.cpp)
add_executable(7576 Bfs/7576.cpp)
add_executable(2178 Bfs/2178.cpp)
add_executable(2146 Bfs/2146.cpp)
add_executable(1991 Tree/1991.cpp)
add_executable(1167 Tree/1167.cpp)
add_executable(1967 Tree/1967.cpp)
add_executable(11728 "Binary Search/11728.cpp")
add_executable(1780 "Binary Search/1780.cpp")
add_executable(11729 "Binary Search/11729.cpp")
add_executable(1992 "Binary Search/1992.cpp")
add_executable(2448 "Binary Search/2448.cpp")
add_executable(1517 "Binary Search/1517.cpp")
add_executable(11047 Greedy/11047.cpp)
add_executable(2875 Greedy/2875.cpp)
add_executable(10610 Greedy/10610.cpp)
add_executable(1931 Greedy/1931.cpp)
add_executable(11399 Greedy/11399.cpp)
add_executable(1476 Brute/1476.cpp)
add_executable(1107 Brute/1107.cpp)