cmake_minimum_required(VERSION 3.25)
project(C__Algorithm)

set(CMAKE_CXX_STANDARD 17)


add_executable(main main.cpp Array/alphabet.cpp Array/roomnumber.cpp)
add_executable(normal Basic/normal.cpp Basic)
add_executable(fastsum Basic/fastsum.cpp Array/array.cpp Array/array.h)
add_executable(array Array/array.cpp)
add_executable(alphabet Array/alphabet.h Array/alphabet.cpp Array/roomnumber.cpp)
add_executable(roomnumber Array/roomnumber.cpp)
add_executable(linkedlist LinkedList/linkedlist.cpp)
add_executable(editor LinkedList/editor.cpp)
add_executable(stack Stack/stack.cpp)
add_executable(Quene Queue/Queue.cpp)
add_executable(implQueue Queue/implQueue.cpp)
add_executable(Deque Deque/Deque.cpp)
add_executable(balanceworld Deque/balanceworld.cpp)
add_executable(picture Bfs/picture.cpp)
add_executable(maze Bfs/maze.cpp)
add_executable(hanoiTower Recursion/hanoiTower.cpp)
add_executable(keylogger LinkedList/keylogger.cpp)
add_executable(dyschromatopsia Bfs/dyschromatopsia.cpp)
add_executable(cat Basic/sort.cpp)
add_executable(count Array/count.cpp)
add_executable(ac Deque/ac.cpp Deque/ac.cpp swea/KillFly.cpp)
add_executable(bank atm.cpp)
add_executable(coldCabbage Bfs/coldCabbage.cpp)
add_executable(knightMove Bfs/knightMove.cpp)
add_executable(breakWall Bfs/breakWall.cpp)
add_executable(termProject Bfs/termProject.cpp)
add_executable(soomba Bfs/soomba.cpp)
add_executable(soombaThree Bfs/soombaThree.cpp)
add_executable(monkeyHopes Bfs/monkeyHopes.cpp)
add_executable(colorPaper Recursion/colorPaper.cpp)
add_executable(nandmFive BackTracking/nandm/nandmFive.cpp)
add_executable(nandmSix BackTracking/nandm/nandmSix.cpp)
add_executable(nandmEight BackTracking/nandm/nandmEight.cpp)
add_executable(nandmTwelve BackTracking/nandm/nandmTwelve.cpp)
add_executable(sevenSisters BackTracking/sevenSisters.cpp)
add_executable(forTest forTest.cpp)
add_executable(makeLine Sort/makeLine.cpp)
add_executable(NormalBackpack DP/NormalBackpack.cpp)
add_executable(BackpackTwo DP/BackpackTwo.cpp)
add_executable(TilingTwo DP/TilingTwo.cpp)
add_executable(Lcs DP/Lcs.cpp)
add_executable(coin DP/coin.cpp)
add_executable(TImeMachine Graph/Bellman-Ford/TImeMachine.cpp)
add_executable(ShortestPath Graph/Dijkstra/ShortestPath.cpp)
add_executable(Floyd Graph/Floyd-Warshall/Floyd.cpp)
add_executable(MusicProgram Graph/MusicProgram.cpp)
add_executable(ConnectNetwork Graph/Union-Find/ConnectNetwork.cpp)
add_executable(SumOfNumber Algo_Dev/SumOfNumber.cpp)
add_executable(Sparse_Table Segment_Tree/Sparse_Table.cpp)
add_executable(Marriage Graph/Marriage.cpp)
add_executable(KillFly swea/KillFly.cpp)
add_executable(TwoNumberString swea/TwoNumberString.cpp)
add_executable(escape Bfs/second/escape.cpp)
add_executable(sum_section DP/sumSection.cpp)
add_executable(sumSection DP/sumSection.cpp)
add_executable(ContinuousSum DP/ContinuousSum.cpp)
add_executable(MeetingRoom Greedy/MeetingRoom.cpp)
add_executable(ChangYong_Village for_A/ChangYong_Village.cpp)
add_executable(Special_Magnet for_A/Special_Magnet.cpp)
add_executable(Switch for_A/Switch.cpp)
add_executable(Floyd2 Graph/Floyd-Warshall/Floyd2.cpp)
add_executable(Shark_elementary for_A/Shark_elementary.cpp)
add_executable(lab for_A/lab.cpp)
add_executable(FineDust for_A/FineDust.cpp)
add_executable(DiceRoll for_A/DiceRoll.cpp)
add_executable(DragonCurve for_A/DragonCurve.cpp)
add_executable(PeopleMove for_A/PeopleMove.cpp)
add_executable(Microbe_Isolation for_A/Microbe_Isolation.cpp)
add_executable(MountainWay for_A/MountainWay.cpp)
add_executable(Processor_connect for_A/Processor_connect.cpp)
add_executable(Wireless_charge for_A/Wireless_charge.cpp)
add_executable(TreePay for_A/TreePay.cpp)
add_executable(2048 Implementation/2048.cpp)
add_executable(BuildRoad for_A/BuildRoad.cpp)
add_executable(BuildRoad2 for_A/BuildRoad2.cpp)
add_executable(GraphEat DP/GraphEat.cpp)
add_executable(11053 Lecture/LIS/11053.cpp)
add_executable(PasteTile DP/PasteTile.cpp)
add_executable(Pado DP/Pado.cpp)
add_executable(2225 DP/2225.cpp)
add_executable(10825 Sort/10825.cpp)
add_executable(BabyShark2 for_A/BabyShark2.cpp)
add_executable(11652 Sort/11652.cpp)
add_executable(11004 Sort/11004.cpp)
add_executable(10799 Stack/10799.cpp)
add_executable(10809 Basic/10809.cpp)
add_executable(2743 Basic/2743.cpp)
add_executable(11655 Basic/11655.cpp)
add_executable(10824 Basic/10824.cpp)
add_executable(11656 Basic/11656.cpp)
add_executable(Garymendering for_A/Garymendering.cpp)
add_executable(1158 Queue/1158.cpp)
add_executable(1934 Math/1934.cpp)
add_executable(11005 Math/11005.cpp)
add_executable(2745 Math/2745.cpp)
add_executable(1260 Bfs/1260.cpp)
add_executable(1707 Bfs/1707.cpp)
add_executable(10451 Bfs/10451.cpp)
add_executable(9466 Bfs/9466.cpp)
add_executable(2667 Bfs/2667.cpp)
add_executable(4963 Bfs/4963.cpp)
add_executable(7576 Bfs/7576.cpp)
add_executable(2178 Bfs/2178.cpp)
add_executable(2146 Bfs/2146.cpp)
add_executable(1991 Tree/1991.cpp)
add_executable(1167 Tree/1167.cpp)
add_executable(1967 Tree/1967.cpp)
add_executable(11728 "Binary Search/11728.cpp")
add_executable(1780 "Binary Search/1780.cpp")
add_executable(11729 "Binary Search/11729.cpp")
add_executable(1992 "Binary Search/1992.cpp")
add_executable(2448 "Binary Search/2448.cpp")
add_executable(1517 "Binary Search/1517.cpp")
add_executable(11047 Greedy/11047.cpp)
add_executable(2875 Greedy/2875.cpp)
add_executable(10610 Greedy/10610.cpp)
add_executable(1931 Greedy/1931.cpp)
add_executable(11399 Greedy/11399.cpp)
add_executable(1476 Brute/1476.cpp)
add_executable(1107 Brute/1107.cpp)
add_executable(1451 Brute/1451.cpp)
add_executable(10819 Brute/10819.cpp)
add_executable(10971 Brute/10971.cpp)
add_executable(1963 Brute/1963.cpp)
add_executable(1075 Basic/1075.cpp
        Basic/Alice_01.cpp)
add_executable(9019 Brute/9019.cpp)
add_executable(1525 Brute/1525.cpp)
add_executable(2251 Brute/2251.cpp)
add_executable(5014 Brute/5014.cpp)
add_executable(1759 Brute/1759.cpp)
add_executable(2580 Brute/2580.cpp)
add_executable(1987 Brute/1987.cpp)
add_executable(6603 Brute/6603.cpp)
add_executable(RockFestival AlgoSpot/RockFestival.cpp)
add_executable(Ratio AlgoSpot/Ratio.cpp)
add_executable(Graduation AlgoSpot/Graduation.cpp)
add_executable(Practice AlgoSpot/Practice.cpp)
add_executable(2167 2167.cpp)
add_executable(Fence AlgoSpot/Fence.cpp)
add_executable(BabyShark for_A/BabyShark.cpp)
add_executable(Alice_01 Basic/Alice_01.cpp)
add_executable(Alice_02 Basic/Alice_02.cpp)
add_executable(Alice_03 Basic/Alice_03.cpp)
add_executable(Alice_04 Basic/Alice_04.cpp)
add_executable(Bshop Basic/Bshop.cpp)
add_executable(Max_Range_of_Rectangle Basic/Max_Range_of_Rectangle.cpp)
add_executable(first_wind Basic/first_wind.cpp)
add_executable(Second_wind Basic/Second_wind.cpp)
add_executable(Spin_Square Basic/Spin_Square.cpp)
add_executable(Shortest_length_encoding Basic/Shortest_length_encoding.cpp)
add_executable(jenga Basic/jenga.cpp)
add_executable(CrossBomb Basic/CrossBomb.cpp)
add_executable(Bomb Basic/Bomb.cpp)
add_executable(Array_basic Array/Array_basic.cpp)
add_executable(practice_queue for_A/practice_queue.cpp)
add_executable(two_dimension_tetris for_A/two_dimension_tetris.cpp)
add_executable(two_dimension_tetris_ans for_A/two_dimension_tetris_ans.cpp)
add_executable(Password Lecture/Brute_Force/Password.cpp)
add_executable(Candy Lecture/Brute_Force/Candy.cpp)
add_executable(Math Lecture/Brute_Force/Math.cpp)
add_executable(NumberBaseball Lecture/Brute_Force/NumberBaseball.cpp)
add_executable(solve Basic/solve.cpp)
add_executable(checker Lecture/Brute_Force/checker.cpp)
add_executable(Red_Green_Light Lecture/Optimization/Red_Green_Light.cpp)
add_executable(Jewerly_Thief Lecture/Optimization/Jewerly_Thief.cpp)
add_executable(divide_to_two Lecture/Optimization/divide_to_two.cpp)
add_executable(Gcd Lecture/Optimization/Gcd.cpp)
add_executable(common_division_list Lecture/Optimization/common_division_list.cpp)
add_executable(Temperature Lecture/Cumulative_sum/Temperature.cpp)
add_executable(1912 Lecture/Cumulative_sum/1912.cpp)
add_executable(2304 Lecture/Cumulative_sum/2304.cpp)
add_executable(2024_softeer_01 2024_softeer_01.cpp)
add_executable(11660 Lecture/Cumulative_sum/11660.cpp)
add_executable(14510 for_A/14510.cpp)
add_executable(17471 for_A/17471.cpp)
add_executable(2805 "Binary Search/2805.cpp")
add_executable(Greed_man for_A/Greed_man.cpp)
add_executable(N_M_6 Lecture/BackTracking/N_M_6.cpp)
add_executable(New_Number_Baseball Lecture/BackTracking/New_Number_Baseball.cpp)
add_executable(Cooker Lecture/BackTracking/Cooker.cpp)
add_executable(Diet Lecture/BackTracking/Diet.cpp)
add_executable(Retirement Lecture/BackTracking/Retirement.cpp)
add_executable(Knapsack Lecture/BackTracking/Knapsack.cpp)
add_executable(Retirement_dp Lecture/BackTracking/Retirement_dp.cpp)
add_executable(Knapsack_dp Lecture/BackTracking/Knapsack_dp.cpp)
add_executable(10815 "Binary Search/10815.cpp")
add_executable(2589 Bfs/second/2589.cpp)
add_executable(Magic_Forest for_A/Magic_Forest.cpp)
add_executable(13460 for_study/13460.cpp)
add_executable(13460_ans for_study/13460_ans.cpp)
add_executable(2573 for_study/2573.cpp)
add_executable(knapsack_bottom Lecture/BackTracking/knapsack_bottom.cpp)
add_executable(3020 Lecture/Cumulative_sum/3020.cpp)
add_executable(14503 for_study/14503.cpp)
add_executable(16234 for_study/16234.cpp)
add_executable(16234_sol for_study/16234_sol.cpp)
add_executable(1717 Lecture/Union_find/1717.cpp)
add_executable(1717_re Lecture/Union_find/1717_re.cpp)
add_executable(12100 for_study/12100.cpp)
add_executable(1826 for_study/1826.cpp)
add_executable(3273 Lecture/TwoPointer/3273.cpp)
add_executable(22988 Lecture/TwoPointer/22988.cpp)
add_executable(Q2 test_복습/kakao_mobility/Q2.cpp)
add_executable(Q3 test_복습/Posco_dx/Q3.cpp)

add_executable(9251 Lecture/LIS/9251.cpp)
add_executable(11723 Lecture/BitMasking/11723.cpp)
add_executable(2098 Lecture/BitMasking/2098.cpp)
add_executable(2098_Re Lecture/BitMasking/2098_Re.cpp)
add_executable(1311 Lecture/BitMasking/1311.cpp)
add_executable(16991 Lecture/BitMasking/16991.cpp)
add_executable(10775 Lecture/Union_find/10775.cpp)
add_executable(1991_re Lecture/Tree/1991_re.cpp)
add_executable(11725 Lecture/Tree/11725.cpp)
add_executable(2293 Lecture/BackTracking/2293.cpp)
add_executable(2294 Lecture/BackTracking/2294.cpp)

add_executable(2961 Lecture/BitMasking/2961.cpp)
add_executable(1094 Lecture/BitMasking/1094.cpp)
add_executable(15661 study/15661.cpp)
add_executable(1062 Lecture/BitMasking/1062.cpp)
add_executable(1062_Re Lecture/BitMasking/1062_Re.cpp)
add_executable(1062_comb Lecture/BitMasking/1062_comb.cpp)
add_executable(15683 Lecture/BackTracking/15683.cpp)
add_executable(18809 Lecture/Brute_Force/18809.cpp)
add_executable(18809_ans Lecture/Brute_Force/18809_ans.cpp)
add_executable(18809_re Lecture/Brute_Force/18809_re.cpp)
add_executable(2550 study/2550.cpp)
add_executable(2550_re study/2550_re.cpp)
add_executable(2550_sol study/2550_sol.cpp)
add_executable(12015 study/12015.cpp)
add_executable(2159 study/2159.cpp)
add_executable(12015_sol study/12015_sol.cpp)
add_executable(5052 study/5052.cpp)
add_executable(2568 study/2568.cpp)
add_executable(2568_ans study/2568_ans.cpp)
add_executable(2618 study/2618.cpp)
add_executable(14426 study/14426.cpp)
add_executable(2637 study/2637.cpp)
add_executable(2637_re study/2637_re.cpp)
add_executable(17471_re study/17471_re.cpp)
add_executable(2042 study/2042.cpp)
add_executable(11505 study/11505.cpp)
add_executable(10999 study/10999.cpp)
add_executable(2252_re study/2252_re.cpp)
add_executable(1011 study/1011.cpp)
add_executable(13460_re study/13460_re.cpp)
add_executable(10999_re study/10999_re.cpp)
add_executable(2206 study/2206.cpp)
add_executable(14442 study/14442.cpp)
add_executable(16933 study/16933.cpp)
add_executable(11438 study/11438.cpp)
add_executable(11438_re study/11438_re.cpp)
add_executable(2437 study/2437.cpp)
add_executable(1311_re study/1311_re.cpp)
add_executable(1516 study/1516.cpp)
add_executable(1937 study/1937.cpp)
add_executable(1916 study/1916.cpp)
add_executable(1916_re study/1916_re.cpp)
add_executable(11779 study/11779.cpp)
add_executable(1865 study/1865.cpp)
add_executable(21608 study/21608.cpp)
add_executable(Shark_elementary_re for_A/Shark_elementary_re.cpp)
add_executable(Robot_path study/Robot_path.cpp)
add_executable(Robot_path_re study/Robot_path_re.cpp)

add_executable(Commuter_Bus study/Commuter_Bus.cpp)
add_executable(car_game study/car_game.cpp)
add_executable(grade_evaluation study/grade_evaluation.cpp)
add_executable(Bomb_Shock Code_Tree/Bomb_Shock.cpp)
add_executable(Bag study/Bag.cpp)
add_executable(Max_AiBi study/Max_AiBi.cpp)
add_executable(Sum_val study/Sum_val.cpp)
add_executable(12_05_six test_복습/softeer/12_05_six.cpp)
add_executable(1209_01 test_복습/pccp/1209_01.cpp)
add_executable(1209_02 test_복습/pccp/1209_02.cpp)
add_executable(1209_03 test_복습/pccp/1209_03.cpp)

add_executable(1238 study/1238.cpp)
add_executable(18869 study/18869.cpp)
add_executable(1799 study/1799.cpp)
add_executable(31778 study/31778.cpp)
add_executable(2517 study/2517.cpp)
add_executable(Diagnosal study/Diagnosal.cpp)
add_executable(7662 study/7662.cpp)
add_executable(14003 study/14003.cpp)
add_executable(2887 study/2887.cpp)
add_executable(28083 study/28083.cpp)
add_executable(1197 study/1197.cpp)
add_executable(1052 study/1052.cpp)
add_executable(2467 study/2467.cpp)
add_executable(5972 study/5972.cpp)
add_executable(test1 for_MX/test1.cpp)
add_executable(test1_2 for_MX/test1_2.cpp)
add_executable(test1_3 for_MX/test1_3.cpp)
add_executable(test2_1 for_MX/test2_1.cpp)
add_executable(test1_4 for_MX/test1_4.cpp)
add_executable(2239 study/2239.cpp)
add_executable(3344 study/3344.cpp)
add_executable(7453 study/7453.cpp)
add_executable(2208 study/2208.cpp)
add_executable(2166 study/2166.cpp)
add_executable(1806 study/1806.cpp)
add_executable(1121 study/1121.cpp)
add_executable(2104 study/2104.cpp)
add_executable(2234 study/2234.cpp)
add_executable(1600 study/1600.cpp)
add_executable(19581 study/19581.cpp)
add_executable(2014 study/2014.cpp)
add_executable(1981 study/1981.cpp)
add_executable(2243 study/2243.cpp)
add_executable(11003 study/11003.cpp)
add_executable(15486 study/15486.cpp)
add_executable(11066 study/11066.cpp)
add_executable(1691 study/1691.cpp)
add_executable(1520 study/1520.cpp)
add_executable(11049 study/11049.cpp)
add_executable(1306 study/1306.cpp)
add_executable(10800 study/10800.cpp)
add_executable(8980 study/8980.cpp)
add_executable(1162 study/1162.cpp)
add_executable(1766 study/1766.cpp)
add_executable(21778 study/21778.cpp)
add_executable(11375 study/11375.cpp)
add_executable(12100_2 study/12100_2.cpp)
add_executable(2461 study/2461.cpp)
add_executable(1202 study/1202.cpp)
add_executable(2169 study/2169.cpp)
add_executable(2169_2 study/2169_2.cpp)
add_executable(8012 study/8012.cpp)
add_executable(6549 study/6549.cpp)
add_executable(15961 study/15961.cpp)